--- a/mobileSecurity/android/app/build.gradle
+++ b/mobileSecurity/android/app/build.gradle
@@ -256,6 +256,10 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
+
+    implementation "androidx.browser:browser:1.2.0"
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
